--- a/alfred/lib/alfred_web/live/overlay_live.html.heex
+++ b/alfred/lib/alfred_web/live/overlay_live.html.heex
@@ -11,7 +11,7 @@
   </head>
   <body>
     <%= unless is_nil(@image_url) do %>
-    <img src={@image_url} class="current-image" />
+    <img src={@image_url} class="current-image image-enter" />
     <% end %>
   </body>
 </html>
