--- a/alfred/lib/alfred_web/live/overlay_live.html.heex
+++ b/alfred/lib/alfred_web/live/overlay_live.html.heex
@@ -8,8 +8,17 @@
     <%= live_title_tag assigns[:page_title] || "Alfred", suffix: " · Phoenix Framework" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@socket, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@socket, "/assets/app.js")}></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet"/>
   </head>
   <body>
+    <header class="topbar">
+      <div class="topbar-inner">
+        <span>
+          <!-- color copied from twitter website -->
+          <i class="fa-brands fa-twitter" style="color: #1D9BF0"></i> @erickgnavar
+        </span>
+      </div>
+    </header>
     <%= unless is_nil(@image_url) do %>
     <img src={@image_url} class="current-image image-enter" />
     <% end %>
