[alfred] Add hack to renew Spotify access token every 20 minutes
Add a loop into admin live page to send an event from server to client
and simulate a click to Spotify login button

Also add a function to Spotify worker to reload credentials from
database once the click was made in client

--- a/alfred/lib/alfred_web/live/admin_live.html.heex
+++ b/alfred/lib/alfred_web/live/admin_live.html.heex
@@ -50,7 +50,7 @@
           Spotify
         </td>
         <td>
-          <%= link "Login", to: Routes.spotify_path(@socket, :authorize) %>
+          <%= link "Login", to: Routes.spotify_path(@socket, :authorize), id: "btn-login-spotify" %>
         </td>
       </tr>
     </tbody>
