[alfred] Add session plug to secure admin page

--- a/alfred/lib/alfred_web/live/admin_live.html.heex
+++ b/alfred/lib/alfred_web/live/admin_live.html.heex
@@ -1,4 +1,7 @@
-<header>Admin</header>
+<header>
+  Admin
+  <%= link "Log out", to: Routes.auth_path(@socket, :logout), method: :delete %>
+</header>
 <div class="flags">
   <h3>Flags</h3>
 
