[alfred] Add autofocus to password input in login page

--- a/alfred/lib/alfred_web/templates/auth/login.html.heex
+++ b/alfred/lib/alfred_web/templates/auth/login.html.heex
@@ -1,5 +1,5 @@
 <form action={Routes.auth_path(@conn, :new_session)} method="POST">
   <%= csrf_input_tag(Routes.auth_path(@conn, :new_session)) %>
-  <input name="password" type="password" />
+  <input name="password" type="password" autofocus />
   <button type="submit">Login</button>
 </form>
