[alfred] Refresh Spotify token when 401 response is received
Also remove hack made to do this by calling a js event from server

--- a/alfred/lib/alfred_web/live/admin_live.html.heex
+++ b/alfred/lib/alfred_web/live/admin_live.html.heex
@@ -53,7 +53,7 @@
           Spotify
         </td>
         <td>
-          <%= link "Login", to: Routes.spotify_path(@socket, :authorize), id: "btn-login-spotify" %>
+          <%= link "Login", to: Routes.spotify_path(@socket, :authorize) %>
         </td>
       </tr>
       <tr>
