[alfred] Add !help command to overlay header

--- a/alfred/lib/alfred_web/live/overlay_live.html.heex
+++ b/alfred/lib/alfred_web/live/overlay_live.html.heex
@@ -4,6 +4,9 @@
       <!-- color copied from twitter website -->
       <i class="fa-brands fa-twitter" style="color: #1D9BF0"></i> @erickgnavar
     </span>
+    <span>
+      !help
+    </span>
     <%= if @last_follow do %>
       <span>
         <i class="fa-solid fa-heart" style="color: #F00"></i> Last follow: <%= @last_follow %>
