--- a/alfred/assets/css/app.css
+++ b/alfred/assets/css/app.css
@@ -122,6 +122,8 @@
   --current-image-max-width: 500px;
   --topbar-height: 1.5rem;
   --topbar-vertical-padding: 5px;
+  --notification-alert-width: 500px;
+  --notification-alert-top: 3em;
 }
 
 .topbar {
@@ -212,4 +214,38 @@
 
 .song-name {
   font-size: 1.5rem;
+}
+
+.notification-alert {
+  position: absolute;
+  width: var(--notification-alert-width);
+  top: var(--notification-alert-top);
+  left: calc(50% - (var(--notification-alert-width) / 2));
+  animation-duration: 1s;
+  animation-name: show-notification;
+}
+
+.notification-image {
+  max-width: var(--notification-alert-width);
+}
+
+.notification-title {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  font-weight: bold;
+  font-size: 2.5em;
+  text-align: center;
+  color: white;
+  text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+}
+
+@keyframes show-notification {
+  from {
+    top: -300px;
+  }
+
+  to {
+    top: var(--notification-alert-top);
+  }
 }
