[alfred] Add markdown support for overlay notification title

--- a/alfred/lib/alfred_web/live/overlay_live.html.heex
+++ b/alfred/lib/alfred_web/live/overlay_live.html.heex
@@ -2,7 +2,7 @@
   <div class="notification-alert">
     <img src={@notification.image_url} class="notification-image" />
     <div class="notification-title">
-      <%= @notification.title %>
+      <%= raw render_markdown(@notification.title) %>
     </div>
   </div>
 <% end %>
