--- a/alfred/lib/alfred_web/live/overlay_live.html.heex
+++ b/alfred/lib/alfred_web/live/overlay_live.html.heex
@@ -5,7 +5,7 @@
       <%= raw render_markdown(@notification.title) %>
     </div>
     <%= if @notification[:sound] do %>
-      <audio controls autoplay>
+      <audio autoplay>
         <source src={@notification.sound} type="audio/ogg">
       </audio>
     <% end %>
