[alfred] Change audio type to mp3 in audio tag for notification sound

--- a/alfred/lib/alfred_web/live/overlay_live.html.heex
+++ b/alfred/lib/alfred_web/live/overlay_live.html.heex
@@ -6,7 +6,7 @@
     </div>
     <%= if @notification[:sound] do %>
       <audio autoplay>
-        <source src={@notification.sound} type="audio/ogg">
+        <source src={@notification.sound} type="audio/mp3">
       </audio>
     <% end %>
   </div>
