[alfred] Add support for sentiment analysis using chat messages
Evaluate sentiment analysis for every chat message and display an
emoji depending on the result of the evaluation

--- a/alfred/assets/css/app.css
+++ b/alfred/assets/css/app.css
@@ -239,6 +239,16 @@
   text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
 }
 
+.sentiment-analysis {
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
+}
+
+.sentiment-analysis .emoji {
+  font-size: 6rem;
+}
+
 @keyframes show-notification {
   from {
     top: -300px;
