--- a/alfred/assets/css/app.css
+++ b/alfred/assets/css/app.css
@@ -205,11 +205,24 @@
   position: absolute;
   bottom: 1rem;
   left: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+
+.playing-song-container .song-cover-container {
+  display: flex;
+  align-items: center;
 }
 
 .playing-song-container img {
-  width: 180px;
-  border-radius: 1rem;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  animation: circle-rotate 7s linear infinite;
+}
+
+.playing-song-container .song-details {
+  font-size: 1rem;
 }
 
 .song-name {
@@ -256,5 +269,14 @@
 
   to {
     top: var(--notification-alert-top);
+  }
+}
+
+@keyframes circle-rotate {
+  0 {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
