[alfred] Upgrade to phoenix 1.7
Make changes to fix new version conventions and format all the HTML
code using new plugin Phoenix.LiveView.HTMLFormatter

--- a/alfred/lib/alfred_web/live/admin_live.html.heex
+++ b/alfred/lib/alfred_web/live/admin_live.html.heex
@@ -1,5 +1,10 @@
-<link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.7/dist/full.css" rel="stylesheet" type="text/css" />
-<script src="https://cdn.tailwindcss.com"></script>
+<link
+  href="https://cdn.jsdelivr.net/npm/daisyui@3.7.7/dist/full.css"
+  rel="stylesheet"
+  type="text/css"
+/>
+<script src="https://cdn.tailwindcss.com">
+</script>
 
 <header class="mx-auto mt-3">
   <div class="navbar bg-base-100">
@@ -9,7 +14,11 @@
     <div class="flex-none">
       <ul class="menu menu-horizontal px-1">
         <li>
-          <%= link "Log out", to: Routes.auth_path(@socket, :logout), method: :delete, class: "btn btn-ghost btn-sm" %>
+          <%= link("Log out",
+            to: Routes.auth_path(@socket, :logout),
+            method: :delete,
+            class: "btn btn-ghost btn-sm"
+          ) %>
         </li>
       </ul>
     </div>
@@ -43,7 +52,14 @@
                 <% end %>
               </td>
               <td>
-                <button type="button" class="btn btn-neutral btn-sm" phx-click="toggle-flag" phx-value-key={flag.key}>Toggle</button>
+                <button
+                  type="button"
+                  class="btn btn-neutral btn-sm"
+                  phx-click="toggle-flag"
+                  phx-value-key={flag.key}
+                >
+                  Toggle
+                </button>
               </td>
             </tr>
           <% end %>
@@ -68,7 +84,10 @@
               Spotify
             </td>
             <td>
-              <%= link "Login", to: Routes.spotify_path(@socket, :authorize), class: "btn btn-neutral btn-sm" %>
+              <%= link("Login",
+                to: Routes.spotify_path(@socket, :authorize),
+                class: "btn btn-neutral btn-sm"
+              ) %>
             </td>
           </tr>
           <tr>
@@ -78,7 +97,10 @@
               Twitch
             </td>
             <td>
-              <%= link "Login", to: Routes.auth_path(@socket, :request, "twitch"), class: "btn btn-neutral btn-sm" %>
+              <%= link("Login",
+                to: Routes.auth_path(@socket, :request, "twitch"),
+                class: "btn btn-neutral btn-sm"
+              ) %>
             </td>
           </tr>
         </tbody>
