--- a/alfred/lib/alfred_web/templates/command/show.html.heex
+++ b/alfred/lib/alfred_web/templates/command/show.html.heex
@@ -1,7 +1,6 @@
 <h1>Show Command</h1>
 
 <ul>
-
   <li>
     <strong>Trigger:</strong>
     <%= @command.trigger %>
@@ -16,8 +15,7 @@
     <strong>Result:</strong>
     <%= @command.result %>
   </li>
-
 </ul>
 
-<span><%= link "Edit", to: Routes.command_path(@conn, :edit, @command) %></span> |
-<span><%= link "Back", to: Routes.command_path(@conn, :index) %></span>
+<span><%= link("Edit", to: Routes.command_path(@conn, :edit, @command)) %></span>
+| <span><%= link("Back", to: Routes.command_path(@conn, :index)) %></span>
