[alfred] Fix error with alerts
Validate if there is some alert before rendering its block

--- a/alfred/lib/alfred_web/templates/layout/app.html.heex
+++ b/alfred/lib/alfred_web/templates/layout/app.html.heex
@@ -1,5 +1,9 @@
 <main>
-  <p class="alert alert-info" role="alert"><%= Phoenix.Flash.get(@flash, :info) %></p>
-  <p class="alert alert-danger" role="alert"><%= Phoenix.Flash.get(@flash, :error) %></p>
+  <p :if={Phoenix.Flash.get(@flash, :info)} class="alert alert-info" role="alert">
+    <%= Phoenix.Flash.get(@flash, :info) %>
+  </p>
+  <p :if={Phoenix.Flash.get(@flash, :error)} class="alert alert-danger" role="alert">
+    <%= Phoenix.Flash.get(@flash, :error) %>
+  </p>
   <%= @inner_content %>
 </main>
