--- a/alfred/lib/alfred_web/templates/layout/live.html.heex
+++ b/alfred/lib/alfred_web/templates/layout/live.html.heex
@@ -1,9 +1,21 @@
 <main>
-  <p class="alert alert-info" role="alert" phx-click="lv:clear-flash" phx-value-key="info">
+  <p
+    :if={Phoenix.Flash.get(@flash, :info)}
+    class="alert alert-info"
+    role="alert"
+    phx-click="lv:clear-flash"
+    phx-value-key="info"
+  >
     <%= Phoenix.Flash.get(@flash, :info) %>
   </p>
 
-  <p class="alert alert-danger" role="alert" phx-click="lv:clear-flash" phx-value-key="error">
+  <p
+    :if={Phoenix.Flash.get(@flash, :error)}
+    class="alert alert-danger"
+    role="alert"
+    phx-click="lv:clear-flash"
+    phx-value-key="error"
+  >
     <%= Phoenix.Flash.get(@flash, :error) %>
   </p>
 
