[alfred] Add commands link to admin page

--- a/alfred/lib/alfred_web/live/admin_live.html.heex
+++ b/alfred/lib/alfred_web/live/admin_live.html.heex
@@ -10,6 +10,7 @@
   <div class="navbar bg-base-100">
     <div class="flex-1">
       <a class="btn btn-ghost normal-case btn-sm text-xl">Admin</a>
+      <a class="btn btn-ghost normal-case btn-sm text-xl" href="/admin/commands">Commands</a>
     </div>
     <div class="flex-none">
       <ul class="menu menu-horizontal px-1">
