[alfred] Add !todo chat command
Allow to show a TODO list on overlay, this will get information from
an Org file which path is stored in config_params table

--- a/alfred/lib/alfred_web/live/overlay_live.html.heex
+++ b/alfred/lib/alfred_web/live/overlay_live.html.heex
@@ -11,6 +11,18 @@
     <% end %>
   </div>
 <% end %>
+
+<%= unless is_nil(@todos) do %>
+  <div id="todos-wrapper">
+    <ul>
+      <li :for={todo <- @todos}>
+        <span :if={todo.done}>[X]</span>
+        <span :if={!todo.done}>[  ]</span>
+        <%= todo.text %>
+      </li>
+    </ul>
+  </div>
+<% end %>
 <header class="topbar">
   <div class="topbar-inner">
     <span>
