--- a/alfred/assets/css/app.css
+++ b/alfred/assets/css/app.css
@@ -164,6 +164,21 @@
   }
 }
 
+#todos-wrapper {
+  position: absolute;
+  top: 4rem;
+  right: 2rem;
+  font-size: 2.5rem;
+  font-family: monospace;
+  color: white;
+  background-color: rgba(255, 0, 0, 0.4);
+  border-radius: 60px;
+}
+
+#todos-wrapper li {
+  list-style: none;
+}
+
 .project-diffs {
   position: absolute;
   top: 4rem;
