--- a/alfred/lib/alfred_web/templates/command/form.html.heex
+++ b/alfred/lib/alfred_web/templates/command/form.html.heex
@@ -5,19 +5,19 @@
     </div>
   <% end %>
 
-  <%= label(f, :trigger) %>
-  <%= text_input(f, :trigger) %>
-  <%= error_tag(f, :trigger) %>
+  {label(f, :trigger)}
+  {text_input(f, :trigger)}
+  {error_tag(f, :trigger)}
 
-  <%= label(f, :type) %>
-  <%= text_input(f, :type) %>
-  <%= error_tag(f, :type) %>
+  {label(f, :type)}
+  {text_input(f, :type)}
+  {error_tag(f, :type)}
 
-  <%= label(f, :result) %>
-  <%= text_input(f, :result) %>
-  <%= error_tag(f, :result) %>
+  {label(f, :result)}
+  {text_input(f, :result)}
+  {error_tag(f, :result)}
 
   <div>
-    <%= submit("Save") %>
+    {submit("Save")}
   </div>
 </.form>
