--- a/alfred/lib/alfred_web/templates/command/index.html.heex
+++ b/alfred/lib/alfred_web/templates/command/index.html.heex
@@ -13,19 +13,19 @@
   <tbody>
     <%= for command <- @commands do %>
       <tr>
-        <td><%= command.trigger %></td>
-        <td><%= command.type %></td>
-        <td><%= command.result %></td>
+        <td>{command.trigger}</td>
+        <td>{command.type}</td>
+        <td>{command.result}</td>
 
         <td>
-          <span><%= link("Show", to: Routes.command_path(@conn, :show, command)) %></span>
-          <span><%= link("Edit", to: Routes.command_path(@conn, :edit, command)) %></span>
+          <span>{link("Show", to: Routes.command_path(@conn, :show, command))}</span>
+          <span>{link("Edit", to: Routes.command_path(@conn, :edit, command))}</span>
           <span>
-            <%= link("Delete",
+            {link("Delete",
               to: Routes.command_path(@conn, :delete, command),
               method: :delete,
               data: [confirm: "Are you sure?"]
-            ) %>
+            )}
           </span>
         </td>
       </tr>
@@ -33,4 +33,4 @@
   </tbody>
 </table>
 
-<span><%= link("New Command", to: Routes.command_path(@conn, :new)) %></span>
+<span>{link("New Command", to: Routes.command_path(@conn, :new))}</span>
