--- a/alfred/lib/alfred_web/templates/command/new.html.heex
+++ b/alfred/lib/alfred_web/templates/command/new.html.heex
@@ -1,5 +1,5 @@
 <h1>New Command</h1>
 
-<%= render("form.html", Map.put(assigns, :action, Routes.command_path(@conn, :create))) %>
+{render("form.html", Map.put(assigns, :action, Routes.command_path(@conn, :create)))}
 
-<span><%= link("Back", to: Routes.command_path(@conn, :index)) %></span>
+<span>{link("Back", to: Routes.command_path(@conn, :index))}</span>
