--- a/alfred/lib/alfred_web/templates/command/show.html.heex
+++ b/alfred/lib/alfred_web/templates/command/show.html.heex
@@ -3,19 +3,19 @@
 <ul>
   <li>
     <strong>Trigger:</strong>
-    <%= @command.trigger %>
+    {@command.trigger}
   </li>
 
   <li>
     <strong>Type:</strong>
-    <%= @command.type %>
+    {@command.type}
   </li>
 
   <li>
     <strong>Result:</strong>
-    <%= @command.result %>
+    {@command.result}
   </li>
 </ul>
 
-<span><%= link("Edit", to: Routes.command_path(@conn, :edit, @command)) %></span>
-| <span><%= link("Back", to: Routes.command_path(@conn, :index)) %></span>
+<span>{link("Edit", to: Routes.command_path(@conn, :edit, @command))}</span>
+| <span>{link("Back", to: Routes.command_path(@conn, :index))}</span>
