--- a/alfred/lib/alfred_web/templates/layout/live.html.heex
+++ b/alfred/lib/alfred_web/templates/layout/live.html.heex
@@ -6,7 +6,7 @@
     phx-click="lv:clear-flash"
     phx-value-key="info"
   >
-    <%= Phoenix.Flash.get(@flash, :info) %>
+    {Phoenix.Flash.get(@flash, :info)}
   </p>
 
   <p
@@ -16,8 +16,8 @@
     phx-click="lv:clear-flash"
     phx-value-key="error"
   >
-    <%= Phoenix.Flash.get(@flash, :error) %>
+    {Phoenix.Flash.get(@flash, :error)}
   </p>
 
-  <%= @inner_content %>
+  {@inner_content}
 </main>
