--- a/alfred/lib/alfred_web/templates/layout/root.html.heex
+++ b/alfred/lib/alfred_web/templates/layout/root.html.heex
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <%= csrf_meta_tag() %>
+    {csrf_meta_tag()}
     <.live_title suffix=" · Streaming">
-      <%= assigns[:page_title] %>
+      {assigns[:page_title]}
     </.live_title>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")} />
     <script
@@ -23,6 +23,6 @@
     />
   </head>
   <body>
-    <%= @inner_content %>
+    {@inner_content}
   </body>
 </html>
